fix text overflow issue on regular and large screens for intro section

--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -26,6 +26,23 @@
   margin-right: 2%;
 }
 
+// Huge screen
+@media only screen and (min-width : 1501px) {
+  .droid-serif {
+    font-size: 2.1vw;
+    line-height: 3.4vw;
+  }
+}
+
+// Most screens
+@media only screen and (min-width : 1025px) and (max-width : 1500px) {
+  .droid-serif {
+    font-size: 2vw;
+    line-height: 3vw;
+  }
+}
+
+// iPads and tablets
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .droid-serif {
     font-size: 1.5em;
